samples/_failures_safe/1761708475_aad9e5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_66788bae.c: In function ‘main’:
./samples/SAFE/__tmp_66788bae.c:173:9: error: expected declaration or statement at end of input
  173 |         printf("Compression ratio: 0.00%%\n");
      |         ^~~~~~
./samples/SAFE/__tmp_66788bae.c:173:9: error: expected declaration or statement at end of input
